force-app/main/default/objects/Project__c/fields/Concept_Note__c.field-meta.xml
<CustomField>
    <fullName>Concept_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concept Note</label>
    <referenceTo>Concept_Note__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>