force-app/main/default/objects/Project__c/fields/Desk_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Desk_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desk Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>