force-app/main/default/objects/Project__c/fields/Donor_Income_Classification__c.field-meta.xml
<CustomField>
    <fullName>Donor_Income_Classification__c</fullName>
    <label>Donor Income Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HQ Funded</fullName>
            </value>
            <value>
                <fullName>Institutional Donor - Locally</fullName>
            </value>
            <value>
                <fullName>Institutional Donor - HA</fullName>
            </value>
            <value>
                <fullName>HA Partner</fullName>
            </value>
            <value>
                <fullName>InKind Donation - From HQ</fullName>
            </value>
            <value>
                <fullName>InKind Donation - Locally FO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>