force-app/main/default/objects/Project__c/fields/Exchange_Rate_to_GBP__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_to_GBP__c</fullName>
    <label>Exchange Rate to GBP</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>