force-app/main/default/objects/Project__c/fields/FO_Person_in_charge__c.field-meta.xml
<CustomField>
    <fullName>FO_Person_in_charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FO Person in charge</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (FO Person in charge)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>