force-app/main/default/objects/Project__c/fields/Fund_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Fund_Allocated__c</fullName>
    <label>Fund Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>