force-app/main/default/objects/Project__c/fields/Implementation_Partner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Implementation Partner)</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>