force-app/main/default/objects/Project__c/fields/In_Kind_Value__c.field-meta.xml
<CustomField>
    <fullName>In_Kind_Value__c</fullName>
    <label>In Kind Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>