force-app/main/default/objects/Project__c/fields/Location_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Project__c</fullName>
    <description>Location of this project to be executed/implemented</description>
    <label>Location of Project</label>
    <type>TextArea</type>
</CustomField>