force-app/main/default/objects/Project__c/fields/Per_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Per_Contribution__c</fullName>
    <label>% Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>