force-app/main/default/objects/Project__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <description>In brief, what is the problem that this intervention addresses? Please give a simple idea of the current situation and need</description>
    <inlineHelpText>In brief, what is the problem that this intervention addresses? Please give a simple idea of the current situation and need</inlineHelpText>
    <label>Problem Statement</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>