force-app/main/default/objects/Project__c/fields/Project_Actual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Actual_End_Date__c</fullName>
    <label>Project Actual End Date</label>
    <type>Date</type>
</CustomField>