force-app/main/default/objects/Project__c/fields/Project_Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Actual_Start_Date__c</fullName>
    <label>Project Actual Start Date</label>
    <type>Date</type>
</CustomField>