force-app/main/default/objects/Project__c/fields/Project_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration_Days__c</fullName>
    <formula>Project_Planned_End_Date__c - Project_Planned_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>