force-app/main/default/objects/Project__c/fields/Project_Extension_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Extension_End_Date__c</fullName>
    <label>Project Extension End Date</label>
    <type>Date</type>
</CustomField>