force-app/main/default/objects/Project__c/fields/Project_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Planned_End_Date__c</fullName>
    <description>End Date of project</description>
    <label>Project Planned End Date</label>
    <type>Date</type>
</CustomField>