force-app/main/default/objects/Project__c/fields/Project_Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Planned_Start_Date__c</fullName>
    <description>Start Date of the project</description>
    <label>Project Planned Start Date</label>
    <type>Date</type>
</CustomField>