force-app/main/default/objects/Project__c/fields/Project_Reference__c.field-meta.xml
<CustomField>
    <fullName>Project_Reference__c</fullName>
    <description>Project ID</description>
    <externalId>true</externalId>
    <label>Project Reference</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>