force-app/main/default/objects/Project__c/fields/Sub_Theme__c.field-meta.xml
<CustomField>
    <fullName>Sub_Theme__c</fullName>
    <label>Sub Theme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Livelihood</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Orphans &amp; Children</fullName>
            </value>
            <value>
                <fullName>Shelter</fullName>
            </value>
            <value>
                <fullName>WASH</fullName>
            </value>
            <value>
                <fullName>Integrated Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>