force-app/main/default/objects/Project__c/fields/Total_Budget_Amount_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Amount_in_GBP__c</fullName>
    <label>Total Budget Amount in GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>