force-app/main/default/objects/Project__c/fields/Total_Budget_Exchange_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Exchange_Amount__c</fullName>
    <label>Total Budget Exchange Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>