force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Project_Reference__c</columns>
    <columns>Location_of_Project__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Projects</label>
</ListView>